Todo module added

--- a/users/profile.html
+++ b/users/profile.html
@@ -19,12 +19,13 @@
 	      <a class="navbar-brand" href="#">ToDo App</a>
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
+		  <li><a href="../to_dos/todos.html"> ToDos</a></li>
 	      <li><a href="javascript:logout();"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
 	    </ul>
 	  </div>
 	</nav>
 	<div class="container">
-		<div class="row profile-info" style="display:none;">
+		<div class="row profile-info" style="display:block;">
 		    <div class="col-md-9">
 		      <div class="panel panel-default">
 		        <div class="panel-body">
@@ -108,44 +109,6 @@
 				</div>
 			</div>
 		</form>
-
-
-	    <div class="well well-sm" style="margin: 3rem;">
-	    	<h1 class="text-center">Bootstrap Todo</h1>
-	    </div>
-
-		<div class="row to-do-list">
-	        <div class="col-md-6">
-	            <div class="todolist not-done">
-	             <h1>Todos</h1>
-					<div class="input-group">
-					  <input type="text" class="form-control add-todo" placeholder="Add todo">
-					  <span class="input-group-btn">
-						<button class="btn btn-default" type="button">Add</button>
-					  </span>
-					</div>
-	                    
-	                    <hr>
-	                	<ul class="list-group">
-	                	  <li class="list-group-item d-flex justify-content-between align-items-center">
-	                	    Cras justo odio
-	                	    <span class="badge badge-pill badge-danger">X</span>
-	                	  </li>
-	                	  <li class="list-group-item d-flex justify-content-between align-items-center">
-	                	    Dapibus ac facilisis in
-	                	    <span class="badge badge-pill badge-danger">X</span>
-	                	  </li>
-	                	  <li class="list-group-item d-flex justify-content-between align-items-center">
-	                	    Morbi leo risus
-	                	    <span class="badge badge-pill badge-danger">X</span>
-	                	  </li>
-	                	</ul>
-	                <div class="todo-footer">
-	                    <strong><span class="count-todos"></span></strong> Items Left
-	                </div>
-	            </div>
-	        </div>
-	    </div>
 	</div>
 
 </body>
